# c-sockets-client-server-example

./: Dockerfile  README.md  docker-compose.yml
client/: .ccls  .gitignore  CMakeLists.txt  Makefile
client/src/: config.h.in  main.c
server/: Dockerfile  Makefile  docker-compose.yml
server/src/: macros.c  main.c
